--- a/templates/gocd/2/rancher-compose.yml
+++ b/templates/gocd/2/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: GoCD
-  version: develop
+  version: 17.3.0-rancher1
   minimum_rancher_version: v1.5.0
   questions:
     - variable: "DEPLOY_SERVER"
