--- a/templates/gocd/0/rancher-compose.yml
+++ b/templates/gocd/0/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: GoCD
-  version: develop
+  version: 0-develop
   minimum_rancher_version: v1.5.0
   questions:
     - variable: "DEPLOY_SERVER"
