--- a/templates/harbor/2/rancher-compose.yml
+++ b/templates/harbor/2/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: Harbor
-  version: 0-develop
+  version: 1.2.2-rev1
   minimum_rancher_version: v1.5.0
   questions:
     - variable: "HARBOR_HOSTNAME"
