--- a/templates/gitlab/config.yml
+++ b/templates/gitlab/config.yml
@@ -3,3 +3,6 @@ description: |
   Gitlab CE is a free GitHub alternative
 version: latest
 category: Versioning
+maintainer: "Sebastien Langoureaux <linuxworkgroup@gmail.com>"
+license: MIT License 
+projectURL: https://gitlab.com/gitlab-org/gitlab-ce
