--- a/templates/gitlab/0/rancher-compose.yml
+++ b/templates/gitlab/0/rancher-compose.yml
@@ -34,17 +34,12 @@ catalog:
       required: false
       default: 22
       type: "string"
-    - variable: "STORAGE_DRIVER"
-      description: "Use 'mount' if you should to mount volume on host"
-      label: "Storage driver"
+    - variable: "VOLUME_DRIVER"
+      description: "The driver name or the path base mount point"
+      label: "Storage driver / Mount base path"
       required: true
       type: "string"
       default: "local"
-    - variable: "STORAGE_BASE_NAME"
-      description: "The base path for persistent data"
-      label: "Path base name"
-      type: "string"
-      required: false
     - variable: "GITLAB_SECRETS_DB_KEY_BASE"
       description: "The secret for CI secret variable"
       label: "Secret DB key"
