--- a/templates/gocd/4/rancher-compose.yml
+++ b/templates/gocd/4/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: GoCD
-  version: 0-develop
+  version: 17.10.0-rev1
   minimum_rancher_version: v1.5.0
   questions:
     - variable: "DEPLOY_SERVER"
