--- a/templates/minio/2/rancher-compose.yml
+++ b/templates/minio/2/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: Minio
-  version: 0-develop
+  version: 2017-08-05-rancher1
   minimum_rancher_version: v1.5.0
   questions:
     - variable: "MINIO_SCALE"
@@ -51,8 +51,17 @@ catalog:
       label: "Minio secret key"
       required: true
       type: "password"
+    - variable: "DEPLOY_LB"
+      description: "Deploy Loadbalancer"
+      label: "Deploy Loadbalancer"
+      required: true
+      type: enum
+      default: "true"
+      options:
+        - "true"
+        - "false"
     - variable: "PUBLISH_PORT"
-      description: "Set port if you want publish external port for minio"
+      description: "Set port if you want publish external port for minio or Loadbalancer"
       label: "Publish port"
       required: false
       type: "string"
@@ -86,3 +95,20 @@ services:
       request_line: ''
       healthy_threshold: 2
       response_timeout: 5000
+  lb:
+    scale: 1
+    start_on_create: true
+    lb_config:
+      certs: []
+      port_rules:
+      - priority: 1
+        protocol: http
+        service: minio-server
+        source_port: 9000
+        target_port: 9000
+    health_check:
+      response_timeout: 2000
+      healthy_threshold: 2
+      port: 42
+      unhealthy_threshold: 3
+      interval: 2000
